# documentation-service

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  documentation-service-specification.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_change_requests.py  003_sessions_and_permissions.py  004_document_control.py  005_electronic_signatures.py  006_audit_immutability.py  007_learning_module.py  008_git_remote_support.py  009_publishing.py  010_admin_ui_completion.py  011_mcp_integration.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: deps.py  public_site.py  router.py
backend/src/api/endpoints/: audit.py  auth.py  change_requests.py  content.py  document_control.py  git.py  learning.py  mcp.py  navigation.py  organizations.py  permissions.py  publishing.py  search.py  service_accounts.py  signatures.py  spaces.py  users.py  webhooks.py  workspaces.py
backend/src/db/: base.py  session.py
backend/src/db/models/: __init__.py  approval.py  assessment.py  audit.py  change_request.py  document_lifecycle.py  document_number.py  electronic_signature.py  git_credential.py  git_sync_event.py  learning_assignment.py  organization.py  page.py  permission.py  published_site.py  quiz_attempt.py  retention_policy.py  service_account.py  session.py  signature_challenge.py  space.py  theme.py  training_acknowledgment.py  user.py  workspace.py
backend/src/modules/access/: dependencies.py  permission_service.py  schemas.py  security.py  service.py  session_service.py
backend/src/modules/audit/: __init__.py  audit_schemas.py  audit_service.py
backend/src/modules/content/: __init__.py  change_request_schemas.py  diff_service.py  (+7 more)
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_change_requests_api.py  test_conflict_detection.py  test_document_control_api.py  test_learning_api.py  test_mcp_api.py  test_organizations_api.py  test_permissions_api.py  test_publishing_api.py  test_spaces_api.py  test_version_control_workflow.py  test_workspaces_api.py
backend/tests/unit/: test_approval_service.py  test_change_request_service.py  test_credential_service.py  test_diff_service.py  test_git_service.py  test_grading_service.py  test_learning_service.py  test_lifecycle_service.py  test_mcp_service.py  test_metadata_service.py  test_navigation_service.py  test_numbering_service.py  test_permission_model.py  test_publishing_service.py  test_rate_limiter.py  test_retention_service.py  test_revision_service.py  test_search_service.py  test_security.py  test_session_model.py  test_sync_service.py  test_tiptap_to_markdown.py  test_webhook_service.py
(+157 files in other folders)
